chore: Cleanup unused files and folders
Removed:
- .claude, .codebase-memory, .kilo, .kilocode (IDE/agent configs)
- plans/ (old planning docs)
- CODE_REVIEW_ACTION_PLAN.md, PHASE1_SUMMARY.md, PHASE3_SUMMARY.md, TEST_PLAN.md, VERCEL_ENV_CONFIG.md (phase summaries)
- agent.md, finsight_handover.md (rebranding artifacts)
- docker-compose.yml.backup, docker-compose.yml.bak (old configs)
- test_fundamentals.py, trade-dialog.tsx (unused files)
- cat (empty file)

Kept:
- docs/ (updated architecture.md, deployment.md, development.md)
- .github/ (CI/CD workflows)
- .mcp.json (MCP config)
- render.yaml (Render config)
- README.md, LICENSE